# Wrapped

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  tox.ini
.github/workflows/: tests.yml
app/: app.py
app/data/: wrapped_extractor.py
app/entities/: trend.py  wrapped.py
app/tests/units/: test_wrapped.py
compose/: Dockerfile
db/: database.json
front-end/: package-lock.json  package.json  tailwind.config.js
front-end/src/: App.vue  main.js
front-end/src/components/: CardViewer.vue  HomePage.vue
