[tool.poetry]
name = "wrapped"
version = "0.1.0"
description = "Wrapped va a ser una aplicación web que nos va a intentar resumir noticias de la forma más fácil posible."
authors = ["Nikita Stetskiy <nikin929@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
