[tool.poetry]
name = "wrapped"
version = "0.1.0"
description = "Wrapped va a ser una aplicación web que nos va a intentar resumir noticias de la forma más fácil posible."
authors = ["Nikita Stetskiy <nikin929@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^4.8.0"
geocoder = "^1.38.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
tox = "^3.25.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
